[package]
name = "beary"
version = "0.1.0"
edition = "2021"
description = "Crate to augment Bear, the note-taking app."
license = "MIT"
keywords = ["bear-note", "pdf"]
readme = "README.md"
repository = "https://github.com/Abhay478/Beary" # yeehaw
documentation = "https://docs.rs/beary/"
author = "Abhay Shankar K"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argon2 = "0.5.0"
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "uuid", "serde_json", "r2d2", "64-column-tables"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
# regex = "1.8.4"
rust-texas = "0.2.6"
uuid = "1.3.3"

[profile.release]
opt-level = "z"  # Optimize for size.
